// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`billing selectors getAddOnAutomationAmountCurrentPlan() should return the amount of automation add-on 1`] = `20`;

exports[`billing selectors getAddOnAutomationAmountCurrentPlan() should return undefined when equivalent plan does not exist 1`] = `undefined`;

exports[`billing selectors getAddOnAutomationDiscountCurrentPlan() should return the add-on amount discount of the current plan when plan is an automation plan 1`] = `0.5`;

exports[`billing selectors getAddOnAutomationDiscountCurrentPlan() should return the discount of automation add-on amount 1`] = `0.5`;

exports[`billing selectors getAddOnAutomationDiscountCurrentPlan() should return undefined when equivalent plan does not exist 1`] = `undefined`;

exports[`billing selectors getAddOnAutomationFullAmountCurrentPlan() should return the full amount of automation add-on 1`] = `40`;

exports[`billing selectors getAddOnAutomationFullAmountCurrentPlan() should return undefined when discount number is not valid 1`] = `undefined`;

exports[`billing selectors getAddOnAutomationFullAmountCurrentPlan() should return undefined when no automation add-on amount or discount exists 1`] = `undefined`;

exports[`billing selectors getEquivalentAutomationCurrentPlan() should return automation plan when current plan is also automation 1`] = `
Object {
  "amount": 120,
  "automation_addon_discount": 0.5,
  "automation_addon_equivalent_plan": "pro-monthly-usd-2",
  "automation_addon_included": true,
  "cost_per_ticket": 0.05,
  "currency": "usd",
  "currencySign": "$",
  "free_tickets": 2000,
  "id": "pro-automation-monthly-usd-2",
  "integrations": 10,
  "interval": "month",
  "is_legacy": false,
  "limits": Object {
    "default": 300,
    "max": 400,
    "min": 200,
  },
  "name": "Pro",
  "order": 2,
  "public": true,
  "trial_period_days": 14,
}
`;

exports[`billing selectors getEquivalentAutomationCurrentPlan() should return automation plan when current plan is regular 1`] = `
Object {
  "amount": 120,
  "automation_addon_discount": 0.5,
  "automation_addon_equivalent_plan": "pro-monthly-usd-2",
  "automation_addon_included": true,
  "cost_per_ticket": 0.05,
  "currency": "usd",
  "currencySign": "$",
  "free_tickets": 2000,
  "id": "pro-automation-monthly-usd-2",
  "integrations": 10,
  "interval": "month",
  "is_legacy": false,
  "limits": Object {
    "default": 300,
    "max": 400,
    "min": 200,
  },
  "name": "Pro",
  "order": 2,
  "public": true,
  "trial_period_days": 14,
}
`;

exports[`billing selectors getEquivalentRegularCurrentPlan() should return regular plan when current plan is also regular 1`] = `
Immutable.Map {
  "cost_per_ticket": 0.05,
  "automation_addon_included": false,
  "interval": "month",
  "automation_addon_discount": 0,
  "public": true,
  "name": "Pro",
  "trial_period_days": 14,
  "currencySign": "$",
  "order": 2,
  "currency": "usd",
  "free_tickets": 2000,
  "automation_addon_equivalent_plan": "pro-automation-monthly-usd-2",
  "limits": Immutable.Map {
    "default": 300,
    "max": 400,
    "min": 200,
  },
  "amount": 100,
  "id": "pro-monthly-usd-2",
  "is_legacy": false,
  "integrations": 10,
}
`;

exports[`billing selectors getEquivalentRegularCurrentPlan() should return regular plan when current plan is automation 1`] = `
Immutable.Map {
  "cost_per_ticket": 0.05,
  "automation_addon_included": false,
  "interval": "month",
  "automation_addon_discount": 0,
  "public": true,
  "name": "Pro",
  "trial_period_days": 14,
  "currencySign": "$",
  "order": 2,
  "currency": "usd",
  "free_tickets": 2000,
  "automation_addon_equivalent_plan": "pro-automation-monthly-usd-2",
  "limits": Immutable.Map {
    "default": 300,
    "max": 400,
    "min": 200,
  },
  "amount": 100,
  "id": "pro-monthly-usd-2",
  "is_legacy": false,
  "integrations": 10,
}
`;

exports[`billing selectors getPlan should return the plan from the state 1`] = `
Object {
  "amount": 500,
  "automation_addon_discount": 0,
  "automation_addon_equivalent_plan": "growth-automation-usd-1",
  "automation_addon_included": false,
  "cost_per_ticket": 0.045,
  "currency": "usd",
  "currencySign": "$",
  "free_tickets": 10000,
  "id": "growth-usd-1",
  "integrations": 15,
  "interval": "month",
  "is_legacy": true,
  "limits": Object {
    "default": 300,
    "max": 400,
    "min": 200,
  },
  "name": "Growth Plan",
  "order": 3,
  "public": false,
  "trial_period_days": 14,
}
`;
